--- a/HTMPage1.html
+++ b/HTMPage1.html
@@ -1,12 +1,35 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title> абркадабра </title>
-    <p> абра</p>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Развитие и обучение</title>
 </head>
 <body>
+    <h1> Заголовок номер один</h1>
+    <p> О том что такое человек, ля ля ля</p>
+    <ol>
+        <li>О том что такое планы</li>
+        <li> Мысли</li>
+        <li> Содержание сайта</li>
+        <li> Структурирование </li>
+    </ol>
+    <table>
+        <tr>
+            <th> <big> Рисунок 1 </big></th>
+            <th><em>Рисунок 2</em> </th>
+            <th> <b>Рисунок 3</b> </th>
+        </tr>
+        <tr>
+            
+        </tr>
 
+
+
+    </table>
+
+
+    
 </body>
 </html>
