--- a/HTMPage1.html
+++ b/HTMPage1.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Развитие и обучение</title>
+    <a href = "HTMPage1.html"> Главная</a>
+    <a href = ""> Ассортимент магазина</a>
+    
 </head>
 <body>
-    <h1> Заголовок номер один</h1>
-    <p> О том что такое человек, ля ля ля</p>
+    <h1> Добро пожаловать в наш интернет магазин</h1>
+    <p> Мы предмтваляем вам... </p>
     <ol>
         <li>О том что такое планы</li>
         <li> Мысли</li>
@@ -19,10 +22,12 @@
         <tr>
             <th> <big> Рисунок 1 </big></th>
             <th><em>Рисунок 2</em> </th>
-            <th> <b>Рисунок 3</b> </th>
+            <th><b> Рисунок 4</b> </th>
         </tr>
         <tr>
-            
+            <td><img scr="http://webimg.ru/themes/cloverfield/images/ref_collage.gif"></td>
+            <td></td>
+            <td></td>
         </tr>
 
 
