--- a/HTMPage3.html
+++ b/HTMPage3.html
@@ -11,5 +11,18 @@
 </head>
 <body>
     <p align ="left">Мы новая компания ...</p>
+    <form action="#">
+        <legend> Расскажите о себе</legend>
+        Как вас зовут?<input type="text" name="name" placeholder="Ваше имя"> <br>
+        Ваша почта<input type="email" name="email" placeholder="Ваша почта"><br>
+        Отзыв<br> 
+        <textarea name="rev" id="" cols="68" rows="10"></textarea>
+        <br>
+        <input type="submit">
+        <input type="reset">
+
+    </form>
+    <h3> Как нас найти</h3>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4c61a1f9abb1c63cb91aa83af826a7577684981e4db7c0c5dd0b4e217d5df692&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 </body>
 </html>
