--- a/HTMPage3.html
+++ b/HTMPage3.html
@@ -7,6 +7,7 @@
     <title> About us</title>    
     <a href="HTMPage1.html">Главная </a>
     <h1 align="center"> О нас</h1>
+    <link rel="stylesheet" type ="text/css" href="style.css">
 
 </head>
 <body>
