--- a/HTMPage1.html
+++ b/HTMPage1.html
@@ -7,6 +7,9 @@
     <title>Развитие и обучение</title>
     <ul class="header-footer">
         <li class="menu-item">
+            <img class="header-image" src="https://avatars.mds.yandex.net/get-zen_doc/52326/pub_5d248a1fa1b4f100ad7cd737_5d2498adf8ea6700ade1e9a7/scale_1200">
+        </li>
+        <li class="menu-item">
             <a class="menu-link" href = "HTMPage1.html"> Главная</a> </li>
         <li class="menu-item">
             <a class="menu-link" href = "HTMPage2.html"> Ассортимент магазина</a></li>
