--- a/HTMPage3.html
+++ b/HTMPage3.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> About us</title>    
-    <a href="HTMPage1.html">Главная </a>
+    <div class="header-footer2">
+        <ul>
+            <li class="menu-item"><img class="header-image" src="https://avatars.mds.yandex.net/get-zen_doc/52326/pub_5d248a1fa1b4f100ad7cd737_5d2498adf8ea6700ade1e9a7/scale_1200"> </li>
+            <li class="menu-item"> <a class="menu-links" href="HTMPage1.html"> Главная </a></li>
+        </ul>
+    </div>
     <h1 align="center"> О нас</h1>
     <link rel="stylesheet" type ="text/css" href="style.css">
 
@@ -23,7 +28,9 @@
         <input type="reset">
 
     </form>
-    <h3> Как нас найти</h3>
-    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4c61a1f9abb1c63cb91aa83af826a7577684981e4db7c0c5dd0b4e217d5df692&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+    <div class="find">
+        <h3> Как нас найти</h3>
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4c61a1f9abb1c63cb91aa83af826a7577684981e4db7c0c5dd0b4e217d5df692&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+    </div>   
 </body>
 </html>
